external-crates/move/crates/move-compiler-transactional-tests/tests/matching/struct_match.snap
---
source: crates/move-transactional-test-runner/src/framework.rs
---
processed 3 tasks

task 2, lines 293-338:
//# run
Error: error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:296:13
    │
296 │         use 0x42::m::{make_nbase, make_pbase, make_npoly, make_ppoly, make_nempty, make_pempty};
    │             ^^^^^^^ Invalid 'use'. Unbound module: '0x42::m'

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:297:17
    │
297 │         assert!(0x42::m::test_00(make_nbase()) == 0, 0);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:297:34
    │
297 │         assert!(0x42::m::test_00(make_nbase()) == 0, 0);
    │                                  ^^^^^^^^^^ Unbound function 'make_nbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:298:17
    │
298 │         assert!(0x42::m::test_01(make_pbase()) == 1, 1);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:298:34
    │
298 │         assert!(0x42::m::test_01(make_pbase()) == 1, 1);
    │                                  ^^^^^^^^^^ Unbound function 'make_pbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:299:17
    │
299 │         assert!(0x42::m::test_02(&make_nbase()) == 2, 2);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:299:35
    │
299 │         assert!(0x42::m::test_02(&make_nbase()) == 2, 2);
    │                                   ^^^^^^^^^^ Unbound function 'make_nbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:300:17
    │
300 │         assert!(0x42::m::test_03(&make_pbase()) == 3, 3);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:300:35
    │
300 │         assert!(0x42::m::test_03(&make_pbase()) == 3, 3);
    │                                   ^^^^^^^^^^ Unbound function 'make_pbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:301:17
    │
301 │         assert!(0x42::m::test_04(&mut make_nbase()) == 4, 4);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:301:39
    │
301 │         assert!(0x42::m::test_04(&mut make_nbase()) == 4, 4);
    │                                       ^^^^^^^^^^ Unbound function 'make_nbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:302:17
    │
302 │         assert!(0x42::m::test_05(&mut make_pbase()) == 5, 5);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:302:39
    │
302 │         assert!(0x42::m::test_05(&mut make_pbase()) == 5, 5);
    │                                       ^^^^^^^^^^ Unbound function 'make_pbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:303:17
    │
303 │         assert!(0x42::m::test_06(make_npoly(make_nbase())) == 6, 6);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:303:34
    │
303 │         assert!(0x42::m::test_06(make_npoly(make_nbase())) == 6, 6);
    │                                  ^^^^^^^^^^ Unbound function 'make_npoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:303:45
    │
303 │         assert!(0x42::m::test_06(make_npoly(make_nbase())) == 6, 6);
    │                                             ^^^^^^^^^^ Unbound function 'make_nbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:304:17
    │
304 │         assert!(0x42::m::test_07(make_npoly(make_pbase())) == 7, 7);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:304:34
    │
304 │         assert!(0x42::m::test_07(make_npoly(make_pbase())) == 7, 7);
    │                                  ^^^^^^^^^^ Unbound function 'make_npoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:304:45
    │
304 │         assert!(0x42::m::test_07(make_npoly(make_pbase())) == 7, 7);
    │                                             ^^^^^^^^^^ Unbound function 'make_pbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:305:17
    │
305 │         assert!(0x42::m::test_08(make_ppoly(make_nbase())) == 8, 8);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:305:34
    │
305 │         assert!(0x42::m::test_08(make_ppoly(make_nbase())) == 8, 8);
    │                                  ^^^^^^^^^^ Unbound function 'make_ppoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:305:45
    │
305 │         assert!(0x42::m::test_08(make_ppoly(make_nbase())) == 8, 8);
    │                                             ^^^^^^^^^^ Unbound function 'make_nbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:306:17
    │
306 │         assert!(0x42::m::test_09(make_ppoly(make_pbase())) == 9, 9);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:306:34
    │
306 │         assert!(0x42::m::test_09(make_ppoly(make_pbase())) == 9, 9);
    │                                  ^^^^^^^^^^ Unbound function 'make_ppoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:306:45
    │
306 │         assert!(0x42::m::test_09(make_ppoly(make_pbase())) == 9, 9);
    │                                             ^^^^^^^^^^ Unbound function 'make_pbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:307:17
    │
307 │         assert!(0x42::m::test_10(&make_npoly(make_nbase())) == 10, 10);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:307:35
    │
307 │         assert!(0x42::m::test_10(&make_npoly(make_nbase())) == 10, 10);
    │                                   ^^^^^^^^^^ Unbound function 'make_npoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:307:46
    │
307 │         assert!(0x42::m::test_10(&make_npoly(make_nbase())) == 10, 10);
    │                                              ^^^^^^^^^^ Unbound function 'make_nbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:308:17
    │
308 │         assert!(0x42::m::test_11(&make_npoly(make_pbase())) == 11, 11);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:308:35
    │
308 │         assert!(0x42::m::test_11(&make_npoly(make_pbase())) == 11, 11);
    │                                   ^^^^^^^^^^ Unbound function 'make_npoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:308:46
    │
308 │         assert!(0x42::m::test_11(&make_npoly(make_pbase())) == 11, 11);
    │                                              ^^^^^^^^^^ Unbound function 'make_pbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:309:17
    │
309 │         assert!(0x42::m::test_12(&make_ppoly(make_nbase())) == 12, 12);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:309:35
    │
309 │         assert!(0x42::m::test_12(&make_ppoly(make_nbase())) == 12, 12);
    │                                   ^^^^^^^^^^ Unbound function 'make_ppoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:309:46
    │
309 │         assert!(0x42::m::test_12(&make_ppoly(make_nbase())) == 12, 12);
    │                                              ^^^^^^^^^^ Unbound function 'make_nbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:310:17
    │
310 │         assert!(0x42::m::test_13(&make_ppoly(make_pbase())) == 13, 13);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:310:35
    │
310 │         assert!(0x42::m::test_13(&make_ppoly(make_pbase())) == 13, 13);
    │                                   ^^^^^^^^^^ Unbound function 'make_ppoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:310:46
    │
310 │         assert!(0x42::m::test_13(&make_ppoly(make_pbase())) == 13, 13);
    │                                              ^^^^^^^^^^ Unbound function 'make_pbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:311:17
    │
311 │         assert!(0x42::m::test_14(&mut make_npoly(make_nbase())) == 14, 14);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:311:39
    │
311 │         assert!(0x42::m::test_14(&mut make_npoly(make_nbase())) == 14, 14);
    │                                       ^^^^^^^^^^ Unbound function 'make_npoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:311:50
    │
311 │         assert!(0x42::m::test_14(&mut make_npoly(make_nbase())) == 14, 14);
    │                                                  ^^^^^^^^^^ Unbound function 'make_nbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:312:17
    │
312 │         assert!(0x42::m::test_15(&mut make_npoly(make_pbase())) == 15, 15);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:312:39
    │
312 │         assert!(0x42::m::test_15(&mut make_npoly(make_pbase())) == 15, 15);
    │                                       ^^^^^^^^^^ Unbound function 'make_npoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:312:50
    │
312 │         assert!(0x42::m::test_15(&mut make_npoly(make_pbase())) == 15, 15);
    │                                                  ^^^^^^^^^^ Unbound function 'make_pbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:313:17
    │
313 │         assert!(0x42::m::test_16(&mut make_ppoly(make_nbase())) == 16, 16);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:313:39
    │
313 │         assert!(0x42::m::test_16(&mut make_ppoly(make_nbase())) == 16, 16);
    │                                       ^^^^^^^^^^ Unbound function 'make_ppoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:313:50
    │
313 │         assert!(0x42::m::test_16(&mut make_ppoly(make_nbase())) == 16, 16);
    │                                                  ^^^^^^^^^^ Unbound function 'make_nbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:314:17
    │
314 │         assert!(0x42::m::test_17(&mut make_ppoly(make_pbase())) == 17, 17);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:314:39
    │
314 │         assert!(0x42::m::test_17(&mut make_ppoly(make_pbase())) == 17, 17);
    │                                       ^^^^^^^^^^ Unbound function 'make_ppoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:314:50
    │
314 │         assert!(0x42::m::test_17(&mut make_ppoly(make_pbase())) == 17, 17);
    │                                                  ^^^^^^^^^^ Unbound function 'make_pbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:315:17
    │
315 │         assert!(0x42::m::test_18(&mut make_npoly(make_nempty())) == 18, 18);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:315:39
    │
315 │         assert!(0x42::m::test_18(&mut make_npoly(make_nempty())) == 18, 18);
    │                                       ^^^^^^^^^^ Unbound function 'make_npoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:315:50
    │
315 │         assert!(0x42::m::test_18(&mut make_npoly(make_nempty())) == 18, 18);
    │                                                  ^^^^^^^^^^^ Unbound function 'make_nempty' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:316:17
    │
316 │         assert!(0x42::m::test_19(&mut make_npoly(make_nempty())) == 19, 19);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:316:39
    │
316 │         assert!(0x42::m::test_19(&mut make_npoly(make_nempty())) == 19, 19);
    │                                       ^^^^^^^^^^ Unbound function 'make_npoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:316:50
    │
316 │         assert!(0x42::m::test_19(&mut make_npoly(make_nempty())) == 19, 19);
    │                                                  ^^^^^^^^^^^ Unbound function 'make_nempty' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:317:17
    │
317 │         assert!(0x42::m::test_20(&mut make_ppoly(make_nempty())) == 20, 20);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:317:39
    │
317 │         assert!(0x42::m::test_20(&mut make_ppoly(make_nempty())) == 20, 20);
    │                                       ^^^^^^^^^^ Unbound function 'make_ppoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:317:50
    │
317 │         assert!(0x42::m::test_20(&mut make_ppoly(make_nempty())) == 20, 20);
    │                                                  ^^^^^^^^^^^ Unbound function 'make_nempty' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:318:17
    │
318 │         assert!(0x42::m::test_21(&mut make_ppoly(make_nempty())) == 21, 21);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:318:39
    │
318 │         assert!(0x42::m::test_21(&mut make_ppoly(make_nempty())) == 21, 21);
    │                                       ^^^^^^^^^^ Unbound function 'make_ppoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:318:50
    │
318 │         assert!(0x42::m::test_21(&mut make_ppoly(make_nempty())) == 21, 21);
    │                                                  ^^^^^^^^^^^ Unbound function 'make_nempty' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:319:17
    │
319 │         assert!(0x42::m::test_22(&mut make_npoly(make_pempty())) == 22, 22);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:319:39
    │
319 │         assert!(0x42::m::test_22(&mut make_npoly(make_pempty())) == 22, 22);
    │                                       ^^^^^^^^^^ Unbound function 'make_npoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:319:50
    │
319 │         assert!(0x42::m::test_22(&mut make_npoly(make_pempty())) == 22, 22);
    │                                                  ^^^^^^^^^^^ Unbound function 'make_pempty' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:320:17
    │
320 │         assert!(0x42::m::test_23(&mut make_npoly(make_pempty())) == 23, 23);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:320:39
    │
320 │         assert!(0x42::m::test_23(&mut make_npoly(make_pempty())) == 23, 23);
    │                                       ^^^^^^^^^^ Unbound function 'make_npoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:320:50
    │
320 │         assert!(0x42::m::test_23(&mut make_npoly(make_pempty())) == 23, 23);
    │                                                  ^^^^^^^^^^^ Unbound function 'make_pempty' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:321:17
    │
321 │         assert!(0x42::m::test_24(&mut make_ppoly(make_pempty())) == 24, 24);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:321:39
    │
321 │         assert!(0x42::m::test_24(&mut make_ppoly(make_pempty())) == 24, 24);
    │                                       ^^^^^^^^^^ Unbound function 'make_ppoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:321:50
    │
321 │         assert!(0x42::m::test_24(&mut make_ppoly(make_pempty())) == 24, 24);
    │                                                  ^^^^^^^^^^^ Unbound function 'make_pempty' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:322:17
    │
322 │         assert!(0x42::m::test_25(&mut make_ppoly(make_pempty())) == 25, 25);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:322:39
    │
322 │         assert!(0x42::m::test_25(&mut make_ppoly(make_pempty())) == 25, 25);
    │                                       ^^^^^^^^^^ Unbound function 'make_ppoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:322:50
    │
322 │         assert!(0x42::m::test_25(&mut make_ppoly(make_pempty())) == 25, 25);
    │                                                  ^^^^^^^^^^^ Unbound function 'make_pempty' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:323:17
    │
323 │         assert!(0x42::m::test_26(make_npoly(make_nbase())) == 26, 26);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:323:34
    │
323 │         assert!(0x42::m::test_26(make_npoly(make_nbase())) == 26, 26);
    │                                  ^^^^^^^^^^ Unbound function 'make_npoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:323:45
    │
323 │         assert!(0x42::m::test_26(make_npoly(make_nbase())) == 26, 26);
    │                                             ^^^^^^^^^^ Unbound function 'make_nbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:324:17
    │
324 │         assert!(0x42::m::test_27(make_npoly(make_pbase())) == 27, 27);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:324:34
    │
324 │         assert!(0x42::m::test_27(make_npoly(make_pbase())) == 27, 27);
    │                                  ^^^^^^^^^^ Unbound function 'make_npoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:324:45
    │
324 │         assert!(0x42::m::test_27(make_npoly(make_pbase())) == 27, 27);
    │                                             ^^^^^^^^^^ Unbound function 'make_pbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:325:17
    │
325 │         assert!(0x42::m::test_28(make_ppoly(make_nbase())) == 28, 28);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:325:34
    │
325 │         assert!(0x42::m::test_28(make_ppoly(make_nbase())) == 28, 28);
    │                                  ^^^^^^^^^^ Unbound function 'make_ppoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:325:45
    │
325 │         assert!(0x42::m::test_28(make_ppoly(make_nbase())) == 28, 28);
    │                                             ^^^^^^^^^^ Unbound function 'make_nbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:326:17
    │
326 │         assert!(0x42::m::test_29(make_ppoly(make_pbase())) == 29, 29);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:326:34
    │
326 │         assert!(0x42::m::test_29(make_ppoly(make_pbase())) == 29, 29);
    │                                  ^^^^^^^^^^ Unbound function 'make_ppoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:326:45
    │
326 │         assert!(0x42::m::test_29(make_ppoly(make_pbase())) == 29, 29);
    │                                             ^^^^^^^^^^ Unbound function 'make_pbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:327:17
    │
327 │         assert!(0x42::m::test_30(&make_npoly(make_nbase())) == 30, 30);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:327:35
    │
327 │         assert!(0x42::m::test_30(&make_npoly(make_nbase())) == 30, 30);
    │                                   ^^^^^^^^^^ Unbound function 'make_npoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:327:46
    │
327 │         assert!(0x42::m::test_30(&make_npoly(make_nbase())) == 30, 30);
    │                                              ^^^^^^^^^^ Unbound function 'make_nbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:328:17
    │
328 │         assert!(0x42::m::test_31(&make_npoly(make_pbase())) == 31, 31);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:328:35
    │
328 │         assert!(0x42::m::test_31(&make_npoly(make_pbase())) == 31, 31);
    │                                   ^^^^^^^^^^ Unbound function 'make_npoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:328:46
    │
328 │         assert!(0x42::m::test_31(&make_npoly(make_pbase())) == 31, 31);
    │                                              ^^^^^^^^^^ Unbound function 'make_pbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:329:17
    │
329 │         assert!(0x42::m::test_32(&make_ppoly(make_nbase())) == 32, 32);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:329:35
    │
329 │         assert!(0x42::m::test_32(&make_ppoly(make_nbase())) == 32, 32);
    │                                   ^^^^^^^^^^ Unbound function 'make_ppoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:329:46
    │
329 │         assert!(0x42::m::test_32(&make_ppoly(make_nbase())) == 32, 32);
    │                                              ^^^^^^^^^^ Unbound function 'make_nbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:330:17
    │
330 │         assert!(0x42::m::test_33(&make_ppoly(make_pbase())) == 33, 33);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:330:35
    │
330 │         assert!(0x42::m::test_33(&make_ppoly(make_pbase())) == 33, 33);
    │                                   ^^^^^^^^^^ Unbound function 'make_ppoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:330:46
    │
330 │         assert!(0x42::m::test_33(&make_ppoly(make_pbase())) == 33, 33);
    │                                              ^^^^^^^^^^ Unbound function 'make_pbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:331:17
    │
331 │         assert!(0x42::m::test_34(&mut make_npoly(make_nbase())) == 34, 34);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:331:39
    │
331 │         assert!(0x42::m::test_34(&mut make_npoly(make_nbase())) == 34, 34);
    │                                       ^^^^^^^^^^ Unbound function 'make_npoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:331:50
    │
331 │         assert!(0x42::m::test_34(&mut make_npoly(make_nbase())) == 34, 34);
    │                                                  ^^^^^^^^^^ Unbound function 'make_nbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:332:17
    │
332 │         assert!(0x42::m::test_35(&mut make_npoly(make_pbase())) == 35, 35);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:332:39
    │
332 │         assert!(0x42::m::test_35(&mut make_npoly(make_pbase())) == 35, 35);
    │                                       ^^^^^^^^^^ Unbound function 'make_npoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:332:50
    │
332 │         assert!(0x42::m::test_35(&mut make_npoly(make_pbase())) == 35, 35);
    │                                                  ^^^^^^^^^^ Unbound function 'make_pbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:333:17
    │
333 │         assert!(0x42::m::test_36(&mut make_ppoly(make_nbase())) == 36, 36);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:333:39
    │
333 │         assert!(0x42::m::test_36(&mut make_ppoly(make_nbase())) == 36, 36);
    │                                       ^^^^^^^^^^ Unbound function 'make_ppoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:333:50
    │
333 │         assert!(0x42::m::test_36(&mut make_ppoly(make_nbase())) == 36, 36);
    │                                                  ^^^^^^^^^^ Unbound function 'make_nbase' in current scope

error[E03002]: unbound module
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:334:17
    │
334 │         assert!(0x42::m::test_37(&mut make_ppoly(make_pbase())) == 37, 37);
    │                 ^^^^^^^ Unbound module '0x42::m'

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:334:39
    │
334 │         assert!(0x42::m::test_37(&mut make_ppoly(make_pbase())) == 37, 37);
    │                                       ^^^^^^^^^^ Unbound function 'make_ppoly' in current scope

error[E03005]: unbound unscoped name
    ┌─ /var/folders/tn/5yk4038d4yx1nfrjrjxcl92r0000gn/T/.tmpHagEr1:334:50
    │
334 │         assert!(0x42::m::test_37(&mut make_ppoly(make_pbase())) == 37, 37);
    │                                                  ^^^^^^^^^^ Unbound function 'make_pbase' in current scope
